fixed imgs not showing

--- a/sass/animations.scss
+++ b/sass/animations.scss
@@ -67,3 +67,13 @@
     transform-origin: left;
   }
 }
+
+@keyframes slideshow {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
